--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "SODBOT",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "SODBOT.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "dependencies": {
     "ascii-table": "0.0.9",
     "discord.js": "^11.3.2",
+    "js-levenshtein": "^1.1.3",
     "jsonfile": "^4.0.0",
     "mysql": "^2.16.0",
     "sqlite3": "^4.0.2"
